--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 # Godot 4+ specific ignores
 .godot/
-/android/
+*.tmp
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# System/IDE ignores
+.DS_Store
+.vscode/
+*.swp
+*~
